enhance: Add an activation threshold, allowing for a node to delay outputing it's input